Implement GET and /healthcheck
